Update BaseConcurrentBenchmark.java